2023-09-05T08:14:47Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6081969577 # 1148
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-05
* notice: last 14d: unq all: 2 9
* notice: prev accum: outdated-unq outdated-all / unq all: 147 173 / 154 181
* notice: next accum: outdated-unq outdated-all / unq all: 147 173 / 155 182
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-09-05]

2023-09-04T08:14:50Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6070864630 # 1145
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-04
* notice: last 14d: unq all: 2 8
* notice: prev accum: outdated-unq outdated-all / unq all: 146 172 / 153 180
* notice: next accum: outdated-unq outdated-all / unq all: 147 173 / 154 181
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2023-08-21] / [2023-09-04]

2023-09-03T08:12:43Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6063340121 # 1142
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-03
* notice: last 14d: unq all: 2 8
* notice: prev accum: outdated-unq outdated-all / unq all: 145 171 / 153 180
* notice: next accum: outdated-unq outdated-all / unq all: 146 172 / 153 180
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-08-20] / []

2023-09-01T08:14:32Z: