@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-09-05T08:14:47Z",
-  "count_outdated" : 173,
-  "uniques_outdated" : 147,
+  "timestamp" : "2023-09-06T00:51:28Z",
+  "count_outdated" : 174,
+  "uniques_outdated" : 148,
   "count" : 182,
   "uniques" : 155,
   "clones" : [
-    {
-      "timestamp": "2023-08-23T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-08-24T00:00:00Z",
       "count": 1,
